- Added Docker to the project - Fixed some console errors - Fixed some bugs in the project and IDE - Added slug to products

--- a/frontend/assets/scss/layout.scss
+++ b/frontend/assets/scss/layout.scss
@@ -1,7 +1,7 @@
 @use 'mixins' as *;
-@import "core";
-@import 'sidebar';
-@import 'topbar';
-@import 'responsive';
-@import 'main';
-@import 'typography';
+@use "core";
+@use 'sidebar';
+@use 'topbar';
+@use 'responsive';
+@use 'main';
+@use 'typography';
