--- a/frontend/assets/scss/topbar.scss
+++ b/frontend/assets/scss/topbar.scss
@@ -1,3 +1,5 @@
+@use 'mixins';
+
 .layout-topbar {
   position: fixed;
   height: 4rem;
@@ -41,7 +43,7 @@
     }
 
     &:focus-visible {
-      @include focused();
+      @include mixins.focused();
     }
 
     i {
